--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.4",
     "@gorhom/bottom-sheet": "^4.6.4",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
-    "expo": "~51.0.35",
+    "expo": "~51.0.39",
     "expo-image": "~1.13.0",
     "expo-status-bar": "~1.12.1",
     "formik": "^2.4.6",
@@ -26,21 +29,21 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "react-native-safe-area-context": "^4.10.5",
+    "react-native-screens": "^3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
-    "yup": "^1.4.0",
     "typescript": "~5.3.3",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "yup": "^1.4.0",
+    "expo-device": "~6.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "react-native-svg-transformer": "^1.5.0",
-    "typescript": "^5.1.3"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
